--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'",
+    "eslint": "eslint --fix"
   },
   "author": "rickiezheng",
   "lint-staged": {
